cmake_minimum_required(VERSION 3.11)
project(learn_c_hard_way C)

set(CMAKE_C_STANDARD 11)


#add_executable(dr_monkey dr_monkey/c1-3-1/c1-3-1.c)
#add_executable(dr_monkey1-3-2 dr_monkey/c1-3-2/c1-3-2.c)
#add_executable(dr_monkey1-3-3 dr_monkey/c1-3-3/c1-3-3.c)
add_executable(dr_monkey1-4-1 dr_monkey/c1-4-1/c1-4-1.c)
add_executable(learn_c_hard_way lecture/ex3/ex3.c)
add_executable(learn_cpp main.c)
add_executable(rkvir_re_c rkvir_re_c_basic/demo.c)
add_executable(rkvir_re_c2 rkvir_re_c_basic/demo2.c)