cmake_minimum_required(VERSION 3.11)
project(learn_c_hard_way C)

set(CMAKE_C_STANDARD 11)


#add_executable(dr_monkey dr_monkey/c1-3-1/c1-3-1.c)
#add_executable(dr_monkey1-3-2 dr_monkey/c1-3-2/c1-3-2.c)
#add_executable(dr_monkey1-3-3 dr_monkey/c1-3-3/c1-3-3.c)
#add_executable(dr_monkey1-4-1 dr_monkey/c1-4-1/c1-4-1.c)
#add_executable(dr_monkey2-5-1 dr_monkey/c2-5-1/c2-5-1.c)
#add_executable(dr_monkey2-5-2 dr_monkey/c2-5-2/c2-5-2.c)
#add_executable(dr_monkey2-6-1 dr_monkey/c2-6-1/c2-6-1.c)
#add_executable(dr_monkey2-7-1 dr_monkey/c2-7-1/c2-7-1.c)
#add_executable(dr_monkey2-7-2 dr_monkey/c2-7-2/c2-7-2.c)
add_executable(dr_monkey2-7-3 dr_monkey/c2-7-3/c2-7-3.c)
add_executable(dr_monkey2-8-1 dr_monkey/c2-8-1/c2-8-1.c)
add_executable(dr_monkey2-8-2 dr_monkey/c2-8-2/c2-8-2.c)
add_executable(dr_monkey2-8-3 dr_monkey/c2-8-3/c2-8-3.c)
add_executable(learn_c_hard_way lecture/ex3/ex3.c)
add_executable(learn_cpp main.c)
add_executable(rkvir_re_c rkvir_re_c_basic/demo.c)
add_executable(rkvir_re_c2 rkvir_re_c_basic/demo2.c)